--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/tododb
-spring.datasource.username=todo
-spring.datasource.password=todo
+spring.datasource.url=jdbc:mysql://localhost:3306/javatododb
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # logging.level.root=WARN
