--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,11 +3,11 @@
 # spring.datasource.username=todo
 # spring.datasource.password=todo
 
-spring.datasource.url=jdbc:h2:mem:tododb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=todo
-spring.datasource.password=todo
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/javatododb
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # logging.level.root=WARN
 # logging.level.org.springframework.web=INFO
