--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>todo</name>
-    <description>Demo To do list</description>
+    <description>To do list</description>
 
     <properties>
         <java.version>12</java.version>
